# chalice-task-queue

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.chalice/: config.json
